# pepita

./: .gitignore  .pmat-gates.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  deny.toml  justfile
.github/workflows/: ci.yml  jidoka-gates.yml  nightly.yml  post-release.yml  stress.yml
.pmat/: baseline.json  context.db  deps-cache.json  project.toml
.pmat/context.idx/: functions.lz4  manifest.json
.pmat/metrics/: dependencies.json
benches/: struct_layouts.rs
contracts/: dispatch-v1.yaml  kernel-scheduling-v1.yaml  matmul-v1.yaml
contracts/.pv/cache/lint/: 1073184aac504fd4.json  22cebb376876c17a.json  32b5f18168068ebb.json  4819d62c3ee40740.json  713f662639e39811.json  9758411e4f4af333.json
docs/specifications/: pepita-tiny-rust-first-principles-sovereign-ai-kernal.md  pepita-tiny-rust-first-principles-sovereign-ai-kernel.md
examples/: scheduler_demo.rs
src/: blk_mq.rs  error.rs  executor.rs  fault.rs  gpu.rs  io_uring.rs  lib.rs  main.rs  memory.rs  pool.rs  scheduler.rs  simd.rs  task.rs  transport.rs  ublk.rs  verification_specs.rs  virtio.rs  vmm.rs  zram.rs
tests/: property_test.rs  regression_test.rs  smoke_test.rs
